# FileManipulator

./: CMakeLists.txt  README.md
src/: FileManipulator.cpp
test-vectors/: bigfile1.cpp  bigfile2.ast  file1.cpp  file2.ast
tests/: FileManipulator_constructor_tests.cpp  FileManipulator_constructor_tests.h  main.cpp
